Make zshrc + zshenv private. B/U p10k

--- a/run_once_install-packages-linux.sh.tmpl
+++ b/run_once_install-packages-linux.sh.tmpl
@@ -23,6 +23,7 @@ if command -v apt-get >/dev/null 2>&1; then
     python3
     python3-pip
     bat
+    eza
   )
 
   sudo add-apt-repository ppa:ppa-verse/neovim
