--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -4,3 +4,8 @@
 # Don’t track Karabiner automatic backups
 .config/karabiner/automatic_backups/
 .config/karabiner/automatic_backups/**
+
+# Ignore Karabiner config on non-macOS hosts
+{{ if ne .chezmoi.os "darwin" }}
+.config/karabiner/
+{{ end }}
