--- a/dot_config/zsh/10-env.zsh.tmpl
+++ b/dot_config/zsh/10-env.zsh.tmpl
@@ -8,8 +8,12 @@ if command -v brew &>/dev/null; then
 fi
 
 # --- Java / jenv ---
-export PATH="$HOME/.jenv/bin:$PATH"
-eval "$(jenv init -)"
+if [ -d "$HOME/.jenv" ]; then
+  export PATH="$HOME/.jenv/bin:$PATH"
+  if command -v jenv >/dev/null 2>&1; then
+    eval "$(jenv init -)"
+  fi
+fi
 
 # TODO: Make work with work computer
 {{- if eq .chezmoi.os "darwin" -}}
@@ -21,8 +25,12 @@ export JAVA_HOME="/Library/Java/JavaVirtualMachines/zulu-17.jdk/Contents/Home"
 
 # --- Python (pyenv) ---
 export PYENV_ROOT="$HOME/.pyenv"
-command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"
-eval "$(pyenv init -)"
+if [ -d "$PYENV_ROOT" ]; then
+  export PATH="$PYENV_ROOT/bin:$PATH"
+  if command -v pyenv >/dev/null 2>&1; then
+    eval "$(pyenv init -)"
+  fi
+fi
 
 # --- Node package managers ---
 {{- if eq .chezmoi.os "darwin" -}}
