Fix atuin template?

--- a/run_once_install-packages-darwin.sh.tmpl
+++ b/run_once_install-packages-darwin.sh.tmpl
@@ -41,7 +41,7 @@ for pkg in "${FORMULAS[@]}"; do
   fi
 done
 
-{{ template "atuin_setup" . }}
+{{ template "snippets/atuin-setup.sh" . }}
 
 CASKS=(
   iterm2
